# neuroindex-py

./: LICENSE  README.md  pyproject.toml
src/neuroindex-py/: __init__.py  core.py
