[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "saluta"
version = "0.1.0"
description = "Un semplice pacchetto di esempio"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Alessia", email = "alessia@minestone.com"}
  {name = "Antonio", email = "antonio@minestone.com"}
]

[tool.setuptools.packages.find]
where = ["src"]
